# steniq_tda_jan_2024

./: README.md  pyproject.toml
steniq/: datasaurus-dozen.ipynb  steniq_january.ipynb  utils.py
